[tool.poetry]
name = "discord_app"
version = "1.0"
description = ""
authors = ["lesteenman <lesteenman@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
"discord.py" = "^2"
loguru = "^0.6.0"
PyNaCl = "^1.5.0"

[tool.poetry.group.dev.dependencies]
boto3 = "^1.26.0"
flake8 = "^6.0"
pytest = "^7.1.1"
pytest-mock = "^3.5.1"
pytest-env = "^0.8.1"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.0.0"
opnieuw = "^1.1.0"
coverage = { extras = ["toml"], version = "^6.3" }
docker = "^6.0"
moto = "^4.0.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
omit = [".*", "*/site-packages/*"]
