[tool.poetry]
name = "discord-bot-eternal-guesses"
version = "0.1.0"
description = ""
authors = ["lesteenman <lesteenman@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
aws-cdk-lib = "^2.50.0"
constructs = "^10.1.149"
"aws-cdk.aws-lambda-python-alpha" = "^2.50.0-alpha.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
